# tm-wg-wrapper

./: Cargo.toml
src/: lib.rs
src/ctx/: frame.rs  mod.rs
src/ctx/gfx/: mod.rs
src/ctx/sfx/: mod.rs
src/util/: control.rs  cycle_measure.rs  mod.rs
src/util/scene_frame/: instance.rs  mod.rs  stack.rs
src/util/simple2d/: entity_holder.rs  mod.rs  raw.rs  raw_param.rs  shared.rs  types.rs
src/util/simple2d/entity_holder/: mod.rs
src/util/simple2d/font_typing/: font_type_render.rs  font_type_render_rendering.rs  ftr_plus.rs  mod.rs
src/util/simple2d/font_typing/text_render/: mod.rs
src/util/simple2d/img_obj/: atlas.rs  mod.rs
src/util/simple2d/img_tile/: imaged_tile.wgsl  mod.rs
src/util/simple2d/instance/: buffer.rs  mod.rs
src/util/simple2d/physic/: mod.rs
src/util/simple2d/square_obj/: mod.rs  square_object.wgsl
src/util/simple2d/util/: mod.rs
src/util/simple2d/util/atlas/: mod.rs  types.rs
src/util/simple2d/util/atlas/elem/: container.rs  mod.rs
src/util/simple2d/util/atlas/inserter/: bl.rs  mod.rs
src/util/simple2d/util/atlas/memory/: mod.rs
src/util/simple2d/util/rdr_atlas_obj/: atlas_insert.rs  atlas_object.wgsl  error.rs  instance.rs  mod.rs  shared.rs
src/util/simple2d/util/rev_ref/: mod.rs
src/util/simple2d/util/type_render/: atlas.rs  mod.rs  param.rs  rendering.rs
src/util/simple2d/util/type_render/draw_string/: mod.rs
src/util/simple2d_old/: entity_holder.rs  mod.rs  raw_param.rs
src/util/simple2d_old/img_obj/: imaged_object.wgsl
src/util/simple2d_old/img_tile/: mod.rs
src/util/text_render/: mod.rs
(+4 files in other folders)
