[package]
name = "tm-wg-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bytemuck]
version = "1.13"
features = ["derive"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.rodio]
version = "0.17"

[dependencies]
wgpu = "0.15"
wgpu_glyph = "0.19"
winit = "0.28"
parking_lot = "0.12"
hashbrown = "0.13"
nalgebra = "0.32"
once_cell = "1"